ship: Daten ergänzt

--- a/collections/_ship/09-201105i01.md
+++ b/collections/_ship/09-201105i01.md
@@ -1,14 +1,14 @@
 ---
 layout: project-detail
-title: "Face #xx"
+title: "Front #51"
 slug: 201105i01
 image: /img/photography/ship/LEISKA_201105i01.jpg
-year: 2008
+year: 2011
 archive_id: ""
-description: ""
+description: "BLEICHEN"
 prints: 
--   title: "Leinwand 60 cm x 80 cm, Pigmentdruck"
+-   title: "60 cm x 80 cm"
     price: "1.000"
--   title: "Leinwand 90 cm x 120 cm, Pigmentdruck"
+-   title: "90 cm x 120 cm"
     price: "2.000"
 ---
