--- a/collections/_ship/11-201207j09.md
+++ b/collections/_ship/11-201207j09.md
@@ -1,14 +1,14 @@
 ---
 layout: project-detail
-title: "Face #xx"
+title: "Funnel"
 slug: 201207j09
 image: /img/photography/ship/LEISKA_201207j09.jpg
 year: 2012
 archive_id: ""
-description: ""
+description: "CMA CGM AMERICA"
 prints: 
--   title: "Leinwand 60 cm x 80 cm, Pigmentdruck"
+-   title: "60 cm x 80 cm"
     price: "1.000"
--   title: "Leinwand 90 cm x 120 cm, Pigmentdruck"
+-   title: "90 cm x 120 cm"
     price: "2.000"
 ---
