--- a/collections/_ship/03-200510g43.md
+++ b/collections/_ship/03-200510g43.md
@@ -1,14 +1,14 @@
 ---
 layout: project-detail
-title: "Bow #0x"
+title: "Ship's Side #10"
 slug: 200510g43
 image: /img/photography/ship/LEISKA_200510g43.jpg
 year: 2005
 archive_id: ""
-description: ""
+description: "GLOBAL FREIGHTER"
 prints: 
--   title: "Leinwand 60 cm x 80 cm, Pigmentdruck"
+-   title: "Leinwand 60 cm x 80 cm"
     price: "1.000"
--   title: "Leinwand 90 cm x 120 cm, Pigmentdruck"
+-   title: "Leinwand 90 cm x 120 cm"
     price: "2.000"
 ---
