--- a/collections/_ship/06-200809g07.md
+++ b/collections/_ship/06-200809g07.md
@@ -1,14 +1,14 @@
 ---
 layout: project-detail
-title: "Bow #0x"
+title: "Front #43"
 slug: 200809g07
 image: /img/photography/ship/LEISKA_200809g07.jpg
 year: 2008
 archive_id: ""
-description: ""
+description: "CAP SAN DIEGO"
 prints: 
--   title: "Leinwand 60 cm x 80 cm, Pigmentdruck"
+-   title: "80 cm x 60 cm"
     price: "1.000"
--   title: "Leinwand 90 cm x 120 cm, Pigmentdruck"
+-   title: "140 cm x 110 cm"
     price: "2.000"
 ---
