--- a/collections/_architecture/04-2744-02.md
+++ b/collections/_architecture/04-2744-02.md
@@ -1,11 +1,11 @@
 ---
 layout: project-detail
-title: "Red Car"
-slug: "1807-09"
-image: /img/photography/architecture/LEISKA_1807-09.jpg
-year: 1990
+title: "Staircase to Expo"
+slug: 2744-02
+image: /img/photography/architecture/LEISKA_2744-02.jpg
+year: 1999
 archive_id: ""
-description: "Airport Hamburg"
+description: "World Fair Expo 2000, Hannover"
 prints:
 -   title: 29,7 cm x 42,0 cm &nbsp;&nbsp; (24,9 cm x 33,2 cm) &nbsp;&nbsp;</br> Edition of 120 + 6 AP </br></br>
     price: 120,00 €
