--- a/collections/_architecture/03-1807-06.md
+++ b/collections/_architecture/03-1807-06.md
@@ -1,8 +1,8 @@
 ---
 layout: project-detail
-title: "Parking Ramp"
+title: "Skyward"
 slug: 1807-06
-image: /img/photography/architecture/LEISKA_1807-09.jpg
+image: /img/photography/architecture/LEISKA_1807-06.jpg
 year: 1990
 archive_id: ""
 description: "Airport Hamburg"
