--- a/collections/_architecture/01-1037-26.md
+++ b/collections/_architecture/01-1037-26.md
@@ -1,6 +1,6 @@
 ---
 layout: project-detail
-title: "Staircase in Black"
+title: "Wood, Steel and Black"
 slug: 1037-26
 image: /img/photography/architecture/LEISKA_1037-26.jpg
 year: 2008
