--- a/collections/_architecture/01-1037-26.md
+++ b/collections/_architecture/01-1037-26.md
@@ -7,7 +7,7 @@ year: 2008
 archive_id: ""
 description: "House G"
 prints:
--   title: 29,7 cm x 42,0 cm &nbsp;&nbsp; (24,9 cm x 33,2 cm) &nbsp;&nbsp;</br> Edition of 120 + 6 AP </br></br> 
+-   variable: test-a
     price: 120,00 €
 -   title: 67 cm x 90 cm </br> Edition of 6 + 2 AP </br></br>
     price: "450,00 €"
