Nur 1 Bild geändert

--- a/collections/_architecture/07-3053-38b.md
+++ b/collections/_architecture/07-3053-38b.md
@@ -1,8 +1,8 @@
 ---
 layout: project-detail
-title: "Upstairs"
-slug: 3053-38
-image: /img/photography/architecture/LEISKA_3053-38.jpg
+title: "Disappearing Steps"
+slug: 3053-38b
+image: /img/photography/architecture/LEISKA_3053-38b.jpg
 year: 2002
 archive_id: ""
 description: "HanseMesse, Rostock"
