Variable vorbereitet - wie aufrufen?

--- a/collections/_architecture/01-1037-26.md
+++ b/collections/_architecture/01-1037-26.md
@@ -1,15 +1,15 @@
 ---
 layout: project-detail
 title: "Wood, Steel and Black"
-slug: 1037-26
+slug: Wood-Steel-Black
 image: /img/photography/architecture/LEISKA_1037-26.jpg
-year: 2008
+year: 1991
 archive_id: ""
 description: "House G"
 prints:
--   variable: test-a
-    price: 120,00 €
--   title: 67 cm x 90 cm </br> Edition of 6 + 2 AP </br></br>
+-   title: "Hier Variable A3test einsetzen"
+    price: "120,00 €"
+-   title: "67 cm x 90 cm </br> Edition of 6 + 2 AP </br></br>"
     price: "450,00 €"
 -   title: "90 cm x 120 cm </br> Edition of 6 + 2 AP"
     price: "600,00 €"
