--- a/collections/_architecture/02-1807-06.md
+++ b/collections/_architecture/02-1807-06.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Skyward"
-slug: 1807-06
+slug: "Skyward"
 image: /img/photography/architecture/LEISKA_1807-06.jpg
 year: 1990
 archive_id: ""
