--- a/collections/_architecture/03-1807-09.md
+++ b/collections/_architecture/03-1807-09.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Red Car"
-slug: "1807-09"
+slug: "Red-Car"
 image: /img/photography/architecture/LEISKA_1807-09.jpg
 year: 1990
 archive_id: ""
