--- a/collections/_architecture/04-2744-02.md
+++ b/collections/_architecture/04-2744-02.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Staircase to Expo"
-slug: 2744-02
+slug: "Staircase-to-Expo""
 image: /img/photography/architecture/LEISKA_2744-02.jpg
 year: 1999
 archive_id: ""
