--- a/collections/_architecture/06-2849-23.md
+++ b/collections/_architecture/06-2849-23.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Blue-Yellow"
-slug: 2849-23
+slug: "Blue-Yellow"
 image: /img/photography/architecture/LEISKA_2849-23.jpg
 year: 2000
 archive_id: ""
