--- a/collections/_architecture/08-3200-62.md
+++ b/collections/_architecture/08-3200-62.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "All Done"
-slug: 3200-62
+slug: "All-Done"
 image: /img/photography/architecture/LEISKA_3200-62.jpg
 year: 2004
 archive_id: ""
