--- a/collections/_architecture/09-3206-06.md
+++ b/collections/_architecture/09-3206-06.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Take a Seat"
-slug: 3206-06
+slug: "Take-a-Seat"
 image: /img/photography/architecture/LEISKA_3206-06.jpg
 year: 2004
 archive_id: ""
