--- a/collections/_architecture/11-3228-09.md
+++ b/collections/_architecture/11-3228-09.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Left or Right?"
-slug: 3228-09
+slug: "Left-or-Right"
 image: /img/photography/architecture/LEISKA_3228-09.jpg
 year: 2005
 archive_id: ""
