--- a/collections/_architecture/12-3384-10.md
+++ b/collections/_architecture/12-3384-10.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Turning Torso"
-slug: 3384-10
+slug: "Turning-Torso"
 image: /img/photography/architecture/LEISKA_3384-10.jpg
 year: 2008
 archive_id: ""
