--- a/collections/_architecture/13-3452-25.md
+++ b/collections/_architecture/13-3452-25.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Closed"
-slug: 3452-25
+slug: "Closed"
 image: /img/photography/architecture/LEISKA_3452-25.jpg
 year: 2012
 archive_id: ""
