--- a/collections/_architecture/14-3456-30.md
+++ b/collections/_architecture/14-3456-30.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Looking up"
-slug: 3456-30
+slug: "Looking-up"
 image: /img/photography/architecture/LEISKA_3456-30.jpg
 year: 2012
 archive_id: ""
