--- a/collections/_architecture/18-201110h24.md
+++ b/collections/_architecture/18-201110h24.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Curved"
-slug: 201110h24
+slug: "Curved"
 image: /img/photography/architecture/LEISKA_201110h24.jpg
 year: 2011
 archive_id: ""
