--- a/collections/_ship/03-200510g43.md
+++ b/collections/_ship/03-200510g43.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Ship's Side #10"
-slug: 200510g43
+slug: "Ships-Side#10"
 image: /img/photography/ship/LEISKA_200510g43.jpg
 year: 2005
 archive_id: ""
