--- a/collections/_ship/06-200809g07.md
+++ b/collections/_ship/06-200809g07.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Front #43"
-slug: 200809g07
+slug: "Front#43"
 image: /img/photography/ship/LEISKA_200809g07.jpg
 year: 2008
 archive_id: ""
