--- a/collections/_ship/11-201207j09.md
+++ b/collections/_ship/11-201207j09.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Funnel"
-slug: 201207j09
+slug: "Funnel"
 image: /img/photography/ship/LEISKA_201207j09.jpg
 year: 2012
 archive_id: ""
