--- a/collections/_architecture/01-1037-26.md
+++ b/collections/_architecture/01-1037-26.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Wood, Steel and Black"
-slug: Wood-Steel-Black
+slug: "Wood-Steel-Black"
 image: /img/photography/architecture/LEISKA_1037-26.jpg
 year: 1991
 archive_id: ""
