--- a/collections/_architecture/05-2849-05.md
+++ b/collections/_architecture/05-2849-05.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Number 9"
-slug: 2849-05
+slug: "Number-9"
 image: /img/photography/architecture/LEISKA_2849-05.jpg
 year: 2000
 archive_id: ""
