--- a/collections/_architecture/07-3053-38b.md
+++ b/collections/_architecture/07-3053-38b.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Disappearing Steps"
-slug: 3053-38b
+slug: "Disappearing-Steps"
 image: /img/photography/architecture/LEISKA_3053-38b.jpg
 year: 2002
 archive_id: ""
