--- a/collections/_architecture/10-3211-30.md
+++ b/collections/_architecture/10-3211-30.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Sprint"
-slug: 3211-30
+slug: "Sprint"
 image: /img/photography/architecture/LEISKA_3211-30.jpg
 year: 2004
 archive_id: ""
