--- a/collections/_ship/09-201105i01.md
+++ b/collections/_ship/09-201105i01.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Front #51"
-slug: 201105i01
+slug: "Front#51"
 image: /img/photography/ship/LEISKA_201105i01.jpg
 year: 2011
 archive_id: ""
