--- a/collections/_architecture/01-1037-26.md
+++ b/collections/_architecture/01-1037-26.md
@@ -7,7 +7,7 @@ year: 1991
 archive_id: ""
 description: "House G"
 prints:
--   title: "Hier Variable A3test einsetzen"
+-   variable: small
     price: "120,00 €"
 -   title: "67 cm x 90 cm </br> Edition of 6 + 2 AP </br></br>"
     price: "450,00 €"
