Bildmaße verkürzt, Variable ergänzt (beim 1. Architekturbild)

--- a/collections/_architecture/01-1037-26.md
+++ b/collections/_architecture/01-1037-26.md
@@ -7,10 +7,10 @@ year: 1991
 archive_id: ""
 description: "House G"
 prints:
--   variable: small
+-   variable: 4zu3_small
     price: "120,00 €"
--   title: "67 cm x 90 cm </br> Edition of 6 + 2 AP </br></br>"
+-   variable: 4zu3_medium
     price: "450,00 €"
--   title: "90 cm x 120 cm </br> Edition of 6 + 2 AP"
+-   variable: 4zu3_large
     price: "600,00 €"
 ---
