--- a/collections/_architecture/01-1037-26.md
+++ b/collections/_architecture/01-1037-26.md
@@ -9,7 +9,7 @@ description: "House G"
 prints:
 -   variable: small
     price: "120,00 €"
--   title: "67 cm x 90 cm </br> Edition of 6 + 2 AP </br></br>"
+-   title: "67 cm x 90 cm </br> Edition of 6 + 2 AP"
     price: "450,00 €"
 -   title: "90 cm x 120 cm </br> Edition of 6 + 2 AP"
     price: "600,00 €"
