--- a/collections/_ship/03-200510g43.md
+++ b/collections/_ship/03-200510g43.md
@@ -1,14 +1,16 @@
 ---
 layout: project-detail
 title: "Ship's Side #10"
-slug: "Ships-Side#10"
+slug: "Ships-Side-10"
 image: /img/photography/ship/LEISKA_200510g43.jpg
 year: 2005
 archive_id: ""
 description: "GLOBAL FREIGHTER"
 prints: 
--   title: "Leinwand 60 cm x 80 cm"
-    price: "1.000"
--   title: "Leinwand 90 cm x 120 cm"
-    price: "2.000"
+-   variable: 4zu3_small
+    price: "90,00 €"
+-   variable: 4zu3_medium
+    price: "600,00 €"
+-   variable: 4zu3_large
+    price: "900,00 €"
 ---
