Ein paar Daten ergänzt

--- a/collections/_architecture/01-1037-26.md
+++ b/collections/_architecture/01-1037-26.md
@@ -8,7 +8,7 @@ archive_id: ""
 description: "House G"
 prints:
 -   variable: 4zu3_small
-    price: "120,00 €"
+    price: 90,00 €"
 -   variable: 4zu3_medium
     price: "450,00 €"
 -   variable: 4zu3_large
