--- a/collections/_architecture/02-1807-06.md
+++ b/collections/_architecture/02-1807-06.md
@@ -7,10 +7,10 @@ year: 1990
 archive_id: ""
 description: "Airport Hamburg"
 prints:
--   title: 42,0 cm x 29,7 cm &nbsp;&nbsp; (31,1 cm x 24,9 cm) &nbsp;&nbsp;</br> Edition of 120 + 6 AP </br></br>
-    price: 120,00 €
--   title: 80 cm x 64 cm </br> Edition of 6 + 2 AP </br></br>
+-   variable: 4zu5_small
+    price: "90,00 €"
+-   variable: 4zu5_medium
     price: "450,00 €"
--   title: "120 cm x 96 cm </br> Edition of 6 + 2 AP"
+-   variable: 4zu5_large
     price: "600,00 €"
 ---
