--- a/collections/_architecture/07-3053-38b.md
+++ b/collections/_architecture/07-3053-38b.md
@@ -7,10 +7,10 @@ year: 2002
 archive_id: ""
 description: "HanseMesse, Rostock"
 prints:
--   title: 29,7 cm x 42,0 cm &nbsp;&nbsp; (24,9 cm x 33,2 cm) &nbsp;&nbsp;</br> Edition of 120 + 6 AP </br></br>
-    price: 120,00 €
--   title: 67 cm x 90 cm </br> Edition of 6 + 2 AP </br></br>
+-   variable: 4zu3_small
+    price: "90,00 €"
+-   variable: 4zu3_medium
     price: "450,00 €"
--   title: "90 cm x 120 cm </br> Edition of 6 + 2 AP"
+-   variable: 4zu3_large
     price: "600,00 €"
 ---
