--- a/collections/_architecture/05-2849-05.md
+++ b/collections/_architecture/05-2849-05.md
@@ -7,10 +7,10 @@ year: 2000
 archive_id: ""
 description: "BFW Sachsen-Anhalt, Staßfurt"
 prints:
--   title: 29,7 cm x 42,0 cm &nbsp;&nbsp; (24,9 cm x 33,2 cm) &nbsp;&nbsp;</br> Edition of 120 + 6 AP </br></br>
-    price: 120,00 €
--   title: 67 cm x 90 cm </br> Edition of 6 + 2 AP </br></br>
+-   variable: 3zu4_small
+    price: 90,00 €"
+-   variable: 3zu4_medium
     price: "450,00 €"
--   title: "90 cm x 120 cm </br> Edition of 6 + 2 AP"
+-   variable: 3zu4_large
     price: "600,00 €"
 ---
