--- a/collections/_ship/06-200809g07.md
+++ b/collections/_ship/06-200809g07.md
@@ -8,7 +8,7 @@ archive_id: ""
 description: "CAP SAN DIEGO"
 prints: 
 -   title: "80 cm x 60 cm"
-    price: "1.000"
+    price: "1.000 €"
 -   title: "140 cm x 110 cm"
-    price: "2.000"
+    price: "2.000 €"
 ---
