--- a/collections/_ship/11-201207j09.md
+++ b/collections/_ship/11-201207j09.md
@@ -8,7 +8,7 @@ archive_id: ""
 description: "CMA CGM AMERICA"
 prints: 
 -   title: "60 cm x 80 cm"
-    price: "1.000"
+    price: "1.000 €"
 -   title: "90 cm x 120 cm"
-    price: "2.000"
+    price: "2.000 €"
 ---
