--- a/collections/_cake/03_201107g060.md
+++ b/collections/_cake/03_201107g060.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
-title: "Kanelbul ubakad"
-slug: Kanelbul-ubakad
+title: "Kanelbulle obakad"
+slug: Kanelbulle-obakad
 image: /img/photography/cake/03_LEISKA_201107g060.jpg
 year: 2012
 archive_id: ""
