--- a/collections/_cake/02_201107g014.md
+++ b/collections/_cake/02_201107g014.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Kakdeg"
-slug: 201107g014
+slug: Kakdeg
 image: /img/photography/cake/02_LEISKA_201107g014.jpg
 year: 2012
 archive_id: ""
