--- a/collections/_cake/01_201209b083b.md
+++ b/collections/_cake/01_201209b083b.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Jordgubbspannacotta med spegel"
-slug: 201209b083b
+slug: Jordgubbspannacotta
 image: /img/photography/cake/01_LEISKA_201209b083b.jpg
 year: 2012
 archive_id: ""
