--- a/collections/_cake/04_201107g061.md
+++ b/collections/_cake/04_201107g061.md
@@ -3,12 +3,12 @@ layout: project-detail
 title: "Kanelbulle bakad"
 slug: Kanelbulle-bakad
 image: /img/photography/cake/04_LEISKA_201107g061.jpg
-year: 2012
+year: 2011
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
 -   variable: 3zu2_small
-    price: 120,00 €"
+    price: "120,00 €"
 -   variable: 3zu2_medium
     price: "600,00 €"
 -   variable: 3zu2_large
