--- a/collections/_cake/05_201107g046.md
+++ b/collections/_cake/05_201107g046.md
@@ -3,12 +3,12 @@ layout: project-detail
 title: "Med hallonsylt"
 slug: Med-hallonsylt
 image: /img/photography/cake/05_LEISKA_201107g046.jpg
-year: 2012
+year: 2011
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
 -   variable: 3zu2_small
-    price: 120,00 €"
+    price: "120,00 €"
 -   variable: 3zu2_medium
     price: "600,00 €"
 -   variable: 3zu2_large
