--- a/collections/_cake/07_201107g123.md
+++ b/collections/_cake/07_201107g123.md
@@ -1,16 +1,16 @@
 ---
 layout: project-detail
-title: "Kanelbulle obakad"
-slug: Kanelbulle-obakad
-image: /img/photography/cake/03_LEISKA_201107g060.jpg
+title: "Lingonbrownie"
+slug: Lingonbrownie
+image: /img/photography/cake/07_LEISKA_201107g123.jpg
 year: 2011
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
--   variable: 3zu2_small
+-   variable: 4zu3_small
     price: "120,00 €"
--   variable: 3zu2_medium
+-   variable: 4zu3_medium
     price: "600,00 €"
--   variable: 3zu2_large
+-   variable: 4zu3_large
     price: "900,00 €"
 ---
