--- a/collections/_cake/01_201209b083b.md
+++ b/collections/_cake/01_201209b083b.md
@@ -8,7 +8,7 @@ archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
 -   variable: 1zu1_small
-    price: 120,00 €"
+    price: "120,00 €"
 -   variable: 1zu1_medium
     price: "600,00 €"
 -   variable: 1zu1_large
