--- a/collections/_cake/02_201107g014.md
+++ b/collections/_cake/02_201107g014.md
@@ -3,12 +3,12 @@ layout: project-detail
 title: "Kakdeg"
 slug: Kakdeg
 image: /img/photography/cake/02_LEISKA_201107g014.jpg
-year: 2012
+year: 2011
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
 -   variable: 3zu2_small
-    price: 120,00 €"
+    price: "120,00 €"
 -   variable: 3zu2_medium
     price: "600,00 €"
 -   variable: 3zu2_large
