--- a/collections/_cake/17_201107g046.md
+++ b/collections/_cake/17_201107g046.md
@@ -1,14 +1,14 @@
 ---
 layout: project-detail
-title: "Kanelbulle obakad"
-slug: Kanelbulle-obakad
-image: /img/photography/cake/03_LEISKA_201107g060.jpg
-year: 2011
+title: "Med hallonsylt"
+slug: Med-hallonsylt
+image: /img/photography/cake/05_LEISKA_201107g046.jpg
+year: 2012
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
 -   variable: 3zu2_small
-    price: "120,00 €"
+    price: 120,00 €"
 -   variable: 3zu2_medium
     price: "600,00 €"
 -   variable: 3zu2_large
