--- a/collections/_cake/10_201209b056.md
+++ b/collections/_cake/10_201209b056.md
@@ -1,8 +1,8 @@
 ---
 layout: project-detail
-title: "Med hallonsylt"
-slug: Med-hallonsylt
-image: /img/photography/cake/05_LEISKA_201107g046.jpg
+title: "Katalanska maränger"
+slug: katalanska-maränger
+image: /img/photography/cake/05_LEISKA_201209b056.jpg
 year: 2012
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
