--- a/collections/_cake/09_201107g226.md
+++ b/collections/_cake/09_201107g226.md
@@ -1,9 +1,9 @@
 ---
 layout: project-detail
-title: "Med hallonsylt"
-slug: Med-hallonsylt
-image: /img/photography/cake/05_LEISKA_201107g046.jpg
-year: 2012
+title: ""
+slug: 
+image: /img/photography/cake/09_LEISKA_201107g226.jpg
+year: 2011
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
