--- a/collections/_cake/11_201107g046.md
+++ b/collections/_cake/11_201107g046.md
@@ -1,9 +1,9 @@
 ---
 layout: project-detail
-title: "Med hallonsylt"
-slug: Med-hallonsylt
-image: /img/photography/cake/05_LEISKA_201107g046.jpg
-year: 2012
+title: "Blåbärskaka med cocostosca"
+slug: blåbärskaka-med-cocostosca
+image: /img/photography/cake/11_LEISKA_201107g265.jpg
+year: 2011
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
