--- a/collections/_cake/14_201107g420.md
+++ b/collections/_cake/14_201107g420.md
@@ -1,9 +1,9 @@
 ---
 layout: project-detail
-title: "Med hallonsylt"
-slug: Med-hallonsylt
-image: /img/photography/cake/05_LEISKA_201107g046.jpg
-year: 2012
+title: "Med choklad"
+slug: med-choklad
+image: /img/photography/cake/14_LEISKA_201107g420.jpg
+year: 2011
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
