--- a/collections/_cake/16_201107g451.md
+++ b/collections/_cake/16_201107g451.md
@@ -1,14 +1,14 @@
 ---
 layout: project-detail
-title: "Med hallonsylt"
-slug: Med-hallonsylt
-image: /img/photography/cake/05_LEISKA_201107g046.jpg
-year: 2012
+title: "Röd på vit"
+slug: röd-på-vit
+image: /img/photography/cake/05_LEISKA_201107g451.jpg
+year: 2011
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
 -   variable: 3zu2_small
-    price: 120,00 €"
+    price: "120,00 €"
 -   variable: 3zu2_medium
     price: "600,00 €"
 -   variable: 3zu2_large
