--- a/collections/_cake/09_201107g226.md
+++ b/collections/_cake/09_201107g226.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
-title: ""
-slug: 
+title: "Sand öken"
+slug: sand-öken
 image: /img/photography/cake/09_LEISKA_201107g226.jpg
 year: 2011
 archive_id: ""
