--- a/collections/_cake/10_201209b055.md
+++ b/collections/_cake/10_201209b055.md
@@ -2,13 +2,13 @@
 layout: project-detail
 title: "Katalanska maränger"
 slug: katalanska-maränger
-image: /img/photography/cake/05_LEISKA_201209b056.jpg
+image: /img/photography/cake/10_LEISKA_201209b055.jpg
 year: 2012
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
 -   variable: 3zu2_small
-    price: 120,00 €"
+    price: "120,00 €"
 -   variable: 3zu2_medium
     price: "600,00 €"
 -   variable: 3zu2_large
