--- a/collections/_cake/03_201107g060.md
+++ b/collections/_cake/03_201107g060.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
 title: "Kanelbulle obakad"
-slug: Kanelbulle-obakad
+slug: kanelbulle-obakad
 image: /img/photography/cake/03_LEISKA_201107g060.jpg
 year: 2011
 archive_id: ""
