--- a/collections/_cake/07_201107g123.md
+++ b/collections/_cake/07_201107g123.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
-title: "Lingonbrownie"
-slug: Lingonbrownie
+title: "Röda Havet"
+slug: röda-havet
 image: /img/photography/cake/07_LEISKA_201107g123.jpg
 year: 2011
 archive_id: ""
