--- a/collections/_cake/15_201107g413.md
+++ b/collections/_cake/15_201107g413.md
@@ -1,14 +1,14 @@
 ---
 layout: project-detail
-title: ""
-slug: 
+title: "Grönsaker på frukt"
+slug: grönsaker-på-frukt
 image: /img/photography/cake/15_LEISKA_201107g413.jpg
 year: 2011
 archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
 -   variable: 3zu2_small
-    price: 120,00 €"
+    price: "120,00 €"
 -   variable: 3zu2_medium
     price: "600,00 €"
 -   variable: 3zu2_large
