--- a/collections/_cake/14_201107g420.md
+++ b/collections/_cake/14_201107g420.md
@@ -8,7 +8,7 @@ archive_id: ""
 description: "Vaxholms Hembygdsgårds Café"
 prints: 
 -   variable: 3zu2_small
-    price: 120,00 €"
+    price: "120,00 €"
 -   variable: 3zu2_medium
     price: "600,00 €"
 -   variable: 3zu2_large
