--- a/collections/_cake/12_201107g904.md
+++ b/collections/_cake/12_201107g904.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
-title: "9 tårtor"
-slug: 9-tårtor
+title: "9 cirklar"
+slug: 9-cirklar
 image: /img/photography/cake/12_LEISKA_201107g904.jpg
 year: 2011
 archive_id: ""
