--- a/collections/_model/12_2087-02.md
+++ b/collections/_model/12_2087-02.md
@@ -1,7 +1,7 @@
 ---
 layout: project-detail
-title: "Oriental Art Center Shanghai, 1:300"
-slug: 2087-02
+title: "Tor zur City Süd Hamburg, 1:200"
+slug: tor-zur-city-süd
 image: /img/photography/model/12_LEISKA_2087-02.jpg
 year: 1993
 archive_id: ""
