--- a/collections/_model/12_2087-02.md
+++ b/collections/_model/12_2087-02.md
@@ -8,7 +8,7 @@ archive_id: ""
 description: "Architects: Böge Lindner<br/>Model builder: ?"
 prints: 
 -   variable: 3zu2_small
-    price: 90,00 €"
+    price: "90,00 €"
 -   variable: 3zu2_medium
     price: "450,00 €"
 -   variable: 3zu2_large
