--- a/collections/_architecture/01-3384-10.md
+++ b/collections/_architecture/01-3384-10.md
@@ -1,16 +1,10 @@
 ---
 layout: project-detail
-title: "Turning Torso"
-slug: "Turning-Torso"
+title: Turning Torso
+slug: turning-torso
 image: /img/photography/architecture/LEISKA_3384-10.jpg
 year: 2008
-archive_id: ""
-description: "Turning Torso, Malmö </br> Architecture: Santiago Calatrava"
-prints:
--   variable: 3zu2_small
-    price: 90,00 €"
--   variable: 3zu2_medium
-    price: "450,00 €"
--   variable: 3zu2_large
-    price: "600,00 €"
+archive_id: ''
+description: 'Turning Torso, Malmö </br> Architecture: Santiago Calatrava'
 ---
+
