--- a/collections/_architecture/01-3384-10.md
+++ b/collections/_architecture/01-3384-10.md
@@ -2,6 +2,7 @@
 layout: project-detail
 title: Turning Torso
 slug: turning-torso
+position: 1
 image: /img/photography/architecture/LEISKA_3384-10.jpg
 year: 2008
 archive_id: ''
