--- a/collections/_architecture/01-3384-10.md
+++ b/collections/_architecture/01-3384-10.md
@@ -6,6 +6,8 @@ position: 1
 image: LEISKA_3384-10.jpg
 year: 2008
 archive_id: ''
-description: 'Turning Torso, Malmö </br> Architecture: Santiago Calatrava'
+description: |-
+  Malmö </br>
+  Architecture: Santiago Calatrava
 ---
 
