--- a/collections/_architecture/01-3384-10.md
+++ b/collections/_architecture/01-3384-10.md
@@ -7,7 +7,10 @@ image: LEISKA_3384-10.jpg
 year: 2008
 archive_id: ''
 description: |-
-  Malmö </br>
-  Architecture: Santiago Calatrava
+  Malmö, Sweden </br>
+  Architecture: Santiago Calatrava </br>
+  Edition 60 cm x 80 cm: 6 (+ 2 AP) </br>
+  Edition 90 cm x 120 cm: 6 (+ 2 AP) </br>
+  Edition larger: 1
 ---
 
