--- a/collections/_architecture/05-2849-05.md
+++ b/collections/_architecture/05-2849-05.md
@@ -1,16 +1,13 @@
 ---
 layout: project-detail
-title: "Number 9"
-slug: "Number-9"
+title: Number 9
+slug: Number-9
+position: 9
 image: LEISKA_2849-05.jpg
 year: 2000
-archive_id: ""
-description: "BFW Sachsen-Anhalt, Staßfurt"
-prints:
--   variable: 3zu4_small
-    price: 90,00 €"
--   variable: 3zu4_medium
-    price: "450,00 €"
--   variable: 3zu4_large
-    price: "600,00 €"
+archive_id: ''
+description: |-
+  BFW Sachsen-Anhalt, Staßfurt
+  Architekten: plp Pook Leiska Partner
 ---
+
