--- a/collections/_architecture/05-2849-05.md
+++ b/collections/_architecture/05-2849-05.md
@@ -7,7 +7,7 @@ image: LEISKA_2849-05.jpg
 year: 2000
 archive_id: ''
 description: |-
-  BFW Sachsen-Anhalt, Staßfurt
+  BFW Sachsen-Anhalt, Staßfurt </br>
   Architekten: plp Pook Leiska Partner
 ---
 
