--- a/collections/_architecture/03-1807-09.md
+++ b/collections/_architecture/03-1807-09.md
@@ -1,16 +1,17 @@
 ---
+prints:
+  - variable: 3zu4_small
+    price: '90,00 €"'
+  - variable: 3zu4_medium
+    price: '450,00 €'
+  - variable: 3zu4_large
+    price: '600,00 €'
 layout: project-detail
-title: "Red Car"
-slug: "Red-Car"
+title: Red Car
+slug: Red-Car
+position: 2
 image: LEISKA_1807-09.jpg
 year: 1990
-archive_id: ""
-description: "Airport Hamburg"
-prints:
--   variable: 3zu4_small
-    price: 90,00 €"
--   variable: 3zu4_medium
-    price: "450,00 €"
--   variable: 3zu4_large
-    price: "600,00 €"
+archive_id: ''
+description: Airport Hamburg
 ---
