--- a/collections/_architecture/02-1807-06.md
+++ b/collections/_architecture/02-1807-06.md
@@ -4,6 +4,7 @@ title: "Skyward"
 slug: "Skyward"
 image: LEISKA_1807-06.jpg
 year: 1990
+position: 3
 archive_id: ""
 description: "Airport Hamburg"
 prints:
