enable sorting by date

--- a/collections/_architecture/01-3384-10.md
+++ b/collections/_architecture/01-3384-10.md
@@ -5,6 +5,7 @@ slug: turning-torso
 position: 1
 image: LEISKA_3384-10.jpg
 year: 2008
+date: 2020-01-01
 archive_id: ''
 description: |-
   Malmö, Sweden </br>
