--- a/collections/_architecture/03-1807-09.md
+++ b/collections/_architecture/03-1807-09.md
@@ -9,7 +9,7 @@ prints:
 layout: project-detail
 title: Red Car
 slug: Red-Car
-position: 2
+date: 2020-01-03
 image: LEISKA_1807-09.jpg
 year: 1990
 archive_id: ''
