--- a/collections/_architecture/04-2744-02.md
+++ b/collections/_architecture/04-2744-02.md
@@ -4,6 +4,8 @@ title: "Stairway to Expo"
 slug: "Stairway-to-Expo"
 image: LEISKA_2744-02.jpg
 year: 1999
+position: 4
+date: 2020-01-04
 archive_id: ""
 description: "World Fair Expo 2000, Hannover"
 prints:
