--- a/collections/_architecture/02-1807-06.md
+++ b/collections/_architecture/02-1807-06.md
@@ -5,6 +5,7 @@ slug: "Skyward"
 image: LEISKA_1807-06.jpg
 year: 1990
 position: 3
+date: 2020-01-03
 archive_id: ""
 description: "Airport Hamburg"
 prints:
